# Ticklebot

./: .gitignore  99-astra-fixed-port.rules  =1.23.5  CMakeLists.txt  Dockerfile  FOR_JETSON.md  Nomad.md  README.md  ROS2_MIGRATION_GUIDE.md  ROS_AI_Connection_Analysis.md  RUN_GUIDE.md  STEP2_COMPLETION_SUMMARY.md  TESTING_GUIDE.md  build_ros2.sh  dual_arm_gamepad_implementation.md  frames_2025-08-04_10.37.08.gv  frames_2025-08-05_00.13.02.gv  gazebo_execute.md  guide.md  log.txt  package-lock.json  package.xml  remote_training_setup.sh  repomix-output.xml  repomix.md  requirements.txt  run_nomad_ros2.sh  run_tests.sh  setup.py  teleoperation_n_dataset.md  test_ik_node.py  test_simulation_setup.sh  test_urdf_loading.py  train_nomad.sh
astra_firmware_en/: README.md  System_Integration_Analysis.md
astra_firmware_en/AstraArmController/: platformio.ini
astra_firmware_en/AstraHeadController/: README.md
astra_firmware_en/AstraPedalController/: BUTTON_IMPLEMENTATION.md  COMMUNICATION_PROTOCOL.md  PEDAL_COMMUNICATION_EXAMPLE.md
config/: camera_front.yaml  joystick.yaml  models.yaml  robot.yaml
deployment/: README_AUTONOMOUS_NAVIGATION.md  deployment_environment.yaml
deployment/nomad_deployment/: package.xml  setup.cfg  setup.py
deployment/nomad_deployment/config/: camera_front.yaml  joystick.yaml  pd_controller.yaml  twist_mux.yaml
deployment/nomad_deployment/launch/: explore.launch.py  navigate.launch.py  vint_locobot.launch.py
deployment/nomad_deployment/nomad_deployment/nodes/: create_topomap.py  explore.py  explore_dummy.py  image_dir_player.py  joy_teleop.py  navigate.py  path_viz.py  pd_controller.py
deployment/nomad_deployment/resource/: nomad_deployment
deployment/nomad_deployment/scripts/: create_topomap_ros2.sh  record_bag_ros2.sh
esp32_bridge/: platformio.ini
launch/: nomad_launch.py
lerobot-ros/: README.md  ga.txt  log.txt  log2.txt  mo.txt  pyproject.toml  result.txt  t1.txt
lerobot_ws/: INSTALL_ROS2_HUMBLE.md  check_versions.sh  readme.md
nomad_ros2/: __init__.py  create_topomap_node.py  explore_node.py  joy_teleop_node.py  navigate_node.py  pd_controller_node.py  topic_names.py  utils.py
resource/: nomad_ros2
scripts/: cmdvel_to_odesc.py  publish_cmd.py
src/: sim_to_hardware.md  tickle_moveit_launch_flow.md
src/tickle_taesan_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/tickle_taesan_moveit/config/: astra_dual_so_arm.ros2_control.xacro  astra_dual_so_arm.srdf  astra_dual_so_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
src/tickle_taesan_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/tickle_taesan_moveit/meshes/: Base.dae  Fixed_Jaw.dae  Lower_Arm.dae  Moving_Jaw.dae  Rotation_Pitch.dae  Upper_Arm.dae  Wrist_Pitch_Roll.dae
src/tickle_taesan_moveit/urdf/: astra_dual_so_arm.urdf
test/: test_nomad_nodes.py  test_with_mock_data.py
(+124 files in other folders)
