<?xml version="1.0"?>
<package format="3">
  <name>nomad_deployment</name>
  <version>0.1.0</version>
  <description>ROS2 (Humble) deployment nodes for NoMaD/ViNT navigation</description>

  <maintainer email="user@example.com">maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <!-- Runtime tools used in launch -->
  <exec_depend>joy</exec_depend>
  <exec_depend>twist_mux</exec_depend>
  <exec_depend>v4l2_camera</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


